--- a/TipTop/src/main/resources/application.properties
+++ b/TipTop/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.thymeleaf.cache=false
 
+adminPath=http://localhost:8081/backEnd
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tiptopdatabase
 
