--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -76,14 +76,25 @@
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
 		</dependency>
 		
-		
-
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>4.1.4.Final</version>
+</dependency>
+
+
+		
 	</dependencies>
+	
+	
+	
 
 	<build>
 		<plugins>
