--- a/TipTop/src/main/resources/application.properties
+++ b/TipTop/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.thymeleaf.cache=false
 
-
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.tipTopBites=DEBUG
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tiptopdatabase
 
